@@ -1,3 +1,8 @@
+2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Provide getSizeOfProblem.
+	* src/roboptim-core-cfsqp-plugin.cc: Here.
+
 2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Initialize variables properly.
